--- a/spriteMaker/spriteMaker/Info.plist
+++ b/spriteMaker/spriteMaker/Info.plist
@@ -62,5 +62,7 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Dark</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>PlayMaker saves PNG and GIF to your photo library</string>
 </dict>
 </plist>
