--- a/spriteMaker/spriteMaker/Info.plist
+++ b/spriteMaker/spriteMaker/Info.plist
@@ -83,6 +83,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>Dark</string>
+	<string>Light</string>
 </dict>
 </plist>
