--- a/spriteMaker/spriteMaker.xcodeproj/xcshareddata/xcschemes/spriteMaker.xcscheme
+++ b/spriteMaker/spriteMaker.xcodeproj/xcshareddata/xcschemes/spriteMaker.xcscheme
@@ -81,6 +81,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Pixions"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
