--- a/gridot/GriDot/Info.plist
+++ b/gridot/GriDot/Info.plist
@@ -41,7 +41,7 @@
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>PlayMaker saves PNG and GIF to your photo library</string>
+	<string>GriDot saves PNG and GIF to your photo library</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
